# mystry-box

./: GIFT_AUTOMATION_MIGRATION.md  MYSTERY_BOX_PLAN.md  README.md  package-lock.json  package.json  shopify.app.protected.toml  shopify.app.toml  vite.config.ts
app/: sync-cart-transform.ts
app/components/: GiftRuleEditor.tsx  Icons.tsx  MetricTile.tsx  MysteryBoxEditor.tsx
app/lib/: cart-transform.server.ts  catalog.server.ts  checkout-discount.server.ts  cleanup.server.ts  condition-labels.server.ts  forms.server.ts  mystery-box-product.server.ts  product-conflicts.server.ts  promotion-engine.server.ts  promotion-engine.test.ts  promotions.types.ts  resource-display.ts
app/routes/: app._index.tsx  app.documentation.tsx  app.gifts.$id.tsx  app.gifts._index.tsx  app.gifts.new.tsx  app.mystery-boxes.$id.tsx  app.mystery-boxes._index.tsx  app.mystery-boxes.new.tsx  app.mystery-boxes.resolve-skus.tsx  app.rules._index.tsx  app.settings.tsx  app.tsx  apps.giftlab.evaluate.tsx  apps.giftlab.mystery.tsx  webhooks.app.uninstalled.tsx  webhooks.compliance.tsx  webhooks.inventory-levels-update.tsx  webhooks.orders-create.tsx  webhooks.products.tsx
app/styles/: admin.css
extensions/giftlab-cart/: shopify.extension.toml
extensions/giftlab-discounts/: Cargo.toml  schema.graphql  shopify.extension.toml
extensions/giftlab-discounts/locales/: en.default.json
extensions/giftlab-discounts/src/: cart_lines_discounts_generate_run.graphql  main.rs  run.rs
extensions/giftlab-discounts/tests/: gift-and-tier-input.json
prisma/: schema.prisma
scripts/: ensure-sqlite.mjs
(+21 files in other folders)
