[package]
name = "giftlab-discounts"
version = "1.0.0"
edition = "2021"
publish = false

[[bin]]
name = "giftlab-discounts"
path = "src/main.rs"

[dependencies]
shopify_function = "=2.1.0"
hmac = "0.12.1"
sha2 = "0.10.9"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"
